--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "devashish-jaiswal-|-fractional-cto-&-tech-consultant",
+  "name": "devashish-consultant-portfolio",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "homepage": "https://devajais.github.io/devashish-consultant-portfolio/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react-router-dom": "^7.9.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
-  "grunt": "^1.6.1"
+    "gh-pages": "^6.0.0"
   }
 }
