--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "devashish-consultant-portfolio",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "homepage": "https://devajais.github.io/devashish-consultant-portfolio/",
   "scripts": {
     "dev": "vite",
@@ -17,7 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "gh-pages": "^6.0.0"
