--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "gh-pages": "^6.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "gh-pages": "^6.0.0"
+    "vite": "^6.2.0"
   }
 }
